config/iptables/iptables-zzz.conf
#-----Zzz app required routing rules-----
# 10.5 - open-squid
# 10.6 - dns
# 10.7 - dns-squid
# 10.8 - open
*nat
:PREROUTING ACCEPT
:INPUT ACCEPT
:OUTPUT ACCEPT
:POSTROUTING ACCEPT
-A PREROUTING -s 10.5.0.0/24 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3128
-A PREROUTING -s 10.5.0.0/24 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 3129 ! -d 10.0.0.0/8
-A PREROUTING -s 10.7.0.0/24 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3128
-A PREROUTING -s 10.7.0.0/24 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 3129 ! -d 10.0.0.0/8
-A POSTROUTING -s 10.8.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.7.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.6.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.5.0.0/24 -o eth0 -j MASQUERADE
COMMIT
